# score

./: README.md  pyproject.toml
src/score/: fontsvg.py
tests/: align.py  check_svg.py  getall.py  makepdf.py
