[tool.poetry]
name = "score"
version = "0.1.0"
description = ""
authors = ["Khan Kibria <khan.kibria@gmail.com>"]
readme = "README.md"
packages = [{include = "score", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
opentypesvg = "^1.1.5"
reportlab = "^4.1.0"
svglib = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
